--- a/ChangeLog
+++ b/ChangeLog
@@ -111,6 +111,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * libgadu z 09.01.2004 (chilek)
 * ShowInfoPanel odpowiada za wy¶wietlanie panela informacyjnego (chilek)
 * mo¿liwo¶æ wy¶wietlania statusów opisowych przy nazwach kontaktów ala GG6 (wojtekka/chilek)
+* klikniêcie przycisku wyszukiwania w katalogu publicznym w momencie, gdy ¿aden kontakt
+  nie zosta³ wybrany otwiera okno przeszukiwania katalogu publicznego (chilek)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
