wstawianie elementow do htmldocument
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1714 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -114,6 +114,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * klikniêcie przycisku wyszukiwania w katalogu publicznym w momencie, gdy ¿aden kontakt
   nie zosta³ wybrany otwiera okno przeszukiwania katalogu publicznego (chilek)
 * w Kadu::disconnectNetwork() zawsze wywo³ujemy gg_logoff() (wojtekka/chilek)
+* na potrzeby modulow dodane dwa sygnaly w klasie Chat: messageSendRequested
+  i messageSent (nazgul/adrian)
+* na potrzeby modulow dwie nowe metody w klasie HtmlDocument:
+  insertTag i insertText (nazgul/adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
