nowy mechanizm --with-existing-libgadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1724 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -122,6 +122,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodano sygnal chatDestroyed() w klasie ChatManager (googie/pawel_p)
 * patch zmieniajacy pogrubienie nickow uzytkownikow dostepnych z poprzedniego
   patcha w opcje ustawialna w konfiguracji (uto/adrian)
+* nowy, porzadny mechanizm --with-existing-libgadu (jotpel,sajmon / adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
