--- a/ChangeLog
+++ b/ChangeLog
@@ -125,6 +125,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowy, porzadny mechanizm --with-existing-libgadu (jotpel,sajmon / adrian)
 * dodany nowy sygna³ EventManager::systemMessageReceived(); mo¿liwe, ¿e wiadomo¶ci
   systemowe pochodz±ce od serwerów GG bêd± pojawiaæ siê w oddzielnym oknie ;) (chilek)
+* poprawka libgadu zwiazana z GG_FAILURE_NEED_EMAIL (chilek)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
