--- a/ChangeLog
+++ b/ChangeLog
@@ -136,6 +136,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ogolny mechanizm informowania o powstawaniu nowych instancji klas
   - klasa CreateNotifier - i jej zastosowanie w klasie UserInfo na
   potrzeby modulow (adrian)
+* nie mozna zmienic altNick'a (wyswietl) oraz UIN'u uzytkownika na juz 
+  istniejacy na liscie dodano funkcje getActiveUserBox() oraz poprawiono 
+  funkcje getSelected.. w klasie UserBox (pawel_p)
+
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
