--- a/ChangeLog
+++ b/ChangeLog
@@ -141,6 +141,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   funkcje getSelected.. w klasie UserBox (pawel_p)
 * zamiana cudzyslowia na "&quot;" i odwrotnie w HtmlDocument (nazgul/adrian)
 * poprawka segfaulta przy zmianie altnicka uczestnika konferencji (adrian)
+* poprawka problemu z dodaniem do listy anonimowego uzytkownika
+  z ktorym prowadzimy rozmowe (adrian)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
