poprawka segfault ktory wystepowal gdy dodawalismy anonimowego usera z okna rozmowy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1748 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -147,6 +147,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przy wcisnieciu "ok" (pawel_p)
 * przed zakonczeniem kadu wyladowuje poprawnie wszystkie moduly,
   pozwalajac im zapisac konfiguracje itp (adrian)
+* poprawka, poprawki adrian'a dotycz±cej problemu z dodawaniem do listy
+  anonimowego u¿ytkownika - wystêpowa³ segfault (mast3r)
 
 +++ wersja 0.3.6 (22.11.2003)
 * je¶li klikniemy na jaki¶ kontakt w userboxie, od którego otrzymali¶my jak±¶
