patch nazgula - grupy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1754 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 +++ wersja 0.3.8-cvs
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
   moze powinnismy zmienic nazwe projektu na FastKadu? ;) (adrian)
+* zaaplikowany patch nazgula powodujacy zapamietywanie przez Kadu
+  ostatnio wybranej grupy kontaktow po restarcie (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
