patch romka - qt 3.0
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1756 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ostatnio wybranej grupy kontaktow po restarcie (adrian)
 * zaaplikowany patch michala umozliwiajacy zmiane numeru portu
   nasluchujacego polaczen bezposrednich DCC (adrian)
+* zaaplikowany patch romka przywracajacy kompatybilnosc z QT 3.0.x (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
