mala poprawka dla QT < 3.0.x
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1760 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   nasluchujacego polaczen bezposrednich DCC (adrian)
 * zaaplikowany patch romka przywracajacy kompatybilnosc z QT 3.0.x (adrian)
 * dodano mozliwosc wyboru zestawu ikonek zakladka "Wyglad" (pawel_p)
+* ma³a poprawka dotycz±ca kompatybilno¶ci z QT 3.0.x (skoot/mast3r)
+* debian/rules dodane do configure --enable-voice i --enable-modules (mast3r)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
