--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodano mozliwosc wyboru zestawu ikonek zakladka "Wyglad" (pawel_p)
 * ma³a poprawka dotycz±ca kompatybilno¶ci z QT 3.0.x (skoot/mast3r)
 * debian/rules dodane do configure --enable-voice i --enable-modules (mast3r)
+* jesli przy starcie kadu wystapi blad w ladowaniu ktoregos z modulow
+  to drugi raz nie bedzie ladowany (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
