domyslnie enable-modules i enable-voice
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1764 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   --disable-voice (adrian)
 * configure: aktualizacja listy szukanych naglowkow i bibliotek
   do nowych zrodel programu (adrian)
+* configure: pliki naglowkowe kadu instaluja sie
+  do $prefix/include/kadu (adrian)
+* configure: generowany i instalowany jest skrypt kadu-config, pomocny
+  przy instalacji modulow z poza glownych zrodel kadu (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
