--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przy instalacji modulow z poza glownych zrodel kadu (adrian)
 * zaaplikowany patch michala dodajacy przycisk rozpoczecia rozmowy
   w oknie dialogowym "szukaj w katalogu" (adrian)
+* poprawka arcisza kilku blednie wyswietlanych emotikonow (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
