poprawka i rozbudowa kadu-config
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1769 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zaaplikowany patch michala dodajacy przycisk rozpoczecia rozmowy
   w oknie dialogowym "szukaj w katalogu" (adrian)
 * poprawka arcisza kilku blednie wyswietlanych emotikonow (adrian)
+* poprawka i rozbudowa skryptu kadu-config (michal/adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
