--- a/debian/changelog
+++ b/debian/changelog
@@ -12,5 +12,8 @@ kadu (<wersja>-0) unstable; urgency=low
 		 plikow kadu.
   * 02.11.2003 - Nie ma juz paczki kadu-doc
   * 13.02.2004 - Dodane do configure --enable-modules i --enable-voice
+  * 18.02.2004 - kadu domyslnie wlancza obsluge modulów i dzwieku
+		 wiec --enable-modules i --enable-voice nie jest juz 
+		 potrzebne.
 
  -- Dariusz Jagodzik <mast3r@kadu.net>  Tue, 25 Feb 2003 10:06:51 +0100
