usuniete 'dodaj do opisu'
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1771 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w oknie dialogowym "szukaj w katalogu" (adrian)
 * poprawka arcisza kilku blednie wyswietlanych emotikonow (adrian)
 * poprawka i rozbudowa skryptu kadu-config (michal/adrian)
+* wywalilem opcje "dodaj do opisu". to bylo kiepsko napisane, istnieje
+  juz zarowno modul do bezposredniej obslugi xmms jak i do czytania opisow
+  z pliku z duzo wiekszymi mozliwosciami (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
