kadu zapamiętuje widoczność ToolBara
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1772 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wywalilem opcje "dodaj do opisu". to bylo kiepsko napisane, istnieje
   juz zarowno modul do bezposredniej obslugi xmms jak i do czytania opisow
   z pliku z duzo wiekszymi mozliwosciami (adrian)
+* kadu zapamiêtuje "widoczno¶æ" ToolBar'a (mast3r)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
