.config - konfiguracja modulow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1773 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   juz zarowno modul do bezposredniej obslugi xmms jak i do czytania opisow
   z pliku z duzo wiekszymi mozliwosciami (adrian)
 * kadu zapamiêtuje "widoczno¶æ" ToolBar'a (mast3r)
+* configure: mozliwosc konfigurowania kompilacji modulow w pliku
+  ".config". pokazywanie ustawien w podsumowaniu configure.
+  niebawem bedzie tez dzialac kompilacja statyczna (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
