--- a/ChangeLog
+++ b/ChangeLog
@@ -37,6 +37,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ".config". pokazywanie ustawien w podsumowaniu configure.
   niebawem bedzie tez dzialac kompilacja statyczna (adrian)
 * "³apanie" tak¿e w link znaku \ (mast3r)
+* dla modulow wybranych do statycznej kompilacji powstaja pliki ".a" (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
