--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   niebawem bedzie tez dzialac kompilacja statyczna (adrian)
 * "³apanie" tak¿e w link znaku \ (mast3r)
 * dla modulow wybranych do statycznej kompilacji powstaja pliki ".a" (adrian)
+* konfiguracja i popupmenu w userboxie dopasowane do iconmanagera (adrian)
+* IconManager::loadIcon oprocz nazwy pliku z zestawu moze przyjmowac
+  bezposrednia sciezke do pliku (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
