wydzielenie sound do modulu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1778 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * konfiguracja i popupmenu w userboxie dopasowane do iconmanagera (adrian)
 * IconManager::loadIcon oprocz nazwy pliku z zestawu moze przyjmowac
   bezposrednia sciezke do pliku (adrian)
+* wydzielenie obslugi dzwieku jako modulu "sound" (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
