odlaczanie sygnalow od konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1779 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -42,6 +42,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * IconManager::loadIcon oprocz nazwy pliku z zestawu moze przyjmowac
   bezposrednia sciezke do pliku (adrian)
 * wydzielenie obslugi dzwieku jako modulu "sound" (adrian)
+* funkcje unregisterSlotOnCreate, unregisterSlotOnDestroy, disconnectSlot,
+  umozliwiajace modulom odlaczenie sygnalow od okna konfiguracji (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
