optymalizacje - patch joi'a
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1783 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -51,6 +51,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   narzedziowym i wyrejestrowaniem sie z paska narzedziowego oraz menu (adrian)
 * zaaplikowany patch Vogel-a wymieniajacy brzydki statusbar
   na ladny statusbutton i usuwajacy troche zbednych komponentow (adrian)
+* zaaplikowany patch joi'a zawierajacy kilka optymalizacji, przede wszystkim
+  szybszy heapsort na podstawie zrodel QT (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
