--- a/ChangeLog
+++ b/ChangeLog
@@ -53,6 +53,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   na ladny statusbutton i usuwajacy troche zbednych komponentow (adrian)
 * zaaplikowany patch joi'a zawierajacy kilka optymalizacji, przede wszystkim
   szybszy heapsort na podstawie zrodel QT (adrian)
+* je¶li odebrane UINy przy DCC s± nieprawid³owe to zrywamy po³±czenie (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
