--- a/ChangeLog
+++ b/ChangeLog
@@ -54,6 +54,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zaaplikowany patch joi'a zawierajacy kilka optymalizacji, przede wszystkim
   szybszy heapsort na podstawie zrodel QT (adrian)
 * je¶li odebrane UINy przy DCC s± nieprawid³owe to zrywamy po³±czenie (chilek)
+* funkcja reserve z optymalizacji joi'a uzywana tylko dla QT >= 3.2 (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
