patch michala - zaleznosci w modulach
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1786 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -55,6 +55,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   szybszy heapsort na podstawie zrodel QT (adrian)
 * je¶li odebrane UINy przy DCC s± nieprawid³owe to zrywamy po³±czenie (chilek)
 * funkcja reserve z optymalizacji joi'a uzywana tylko dla QT >= 3.2 (adrian)
+* zaaplikowany patch michala rozbudowujacy menadzera modulow o pobieranie
+  informacji o module oraz obsluge zaleznosci miedzy modulami. wprowadzony
+  kod nie jest oryginalny - wprowadzilem w nim pewne zmiany (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
