modul arts_sound
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1788 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -65,6 +65,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   obslugi dzwieku + pierwszy z modulow "serwerowych" ext_sound obslugujacy
   odtwarzanie przez zewnetrzny program. wszystko dostosowane przeze mnie
   do nowych mozliwosci managera modulow (adrian)
+* dodany modul joi'a do obslugi serwera dzwieku arts + moje przerobki (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
