--- a/ChangeLog
+++ b/ChangeLog
@@ -66,6 +66,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   odtwarzanie przez zewnetrzny program. wszystko dostosowane przeze mnie
   do nowych mozliwosci managera modulow (adrian)
 * dodany modul joi'a do obslugi serwera dzwieku arts + moje przerobki (adrian)
+* dodane pozostale trzy moduly joi'a do obslugi serwerow dzwieku:
+  dsp_sound, esd_sound i nas_sound (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
