gdy mamy siebie na liście kontaktów kadu wyświetla nasz status i opis
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1791 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -69,6 +69,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodane pozostale trzy moduly joi'a do obslugi serwerow dzwieku:
   dsp_sound, esd_sound i nas_sound (adrian)
 * nie dzia³a wyszkukiwanie niewidocznych - kod w search.cpp zakomentowany (chilek)
+* gdy mamy siebie na li¶cie kontaktów kadu wy¶wietla nasz status i opis (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
