--- a/ChangeLog
+++ b/ChangeLog
@@ -70,6 +70,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   dsp_sound, esd_sound i nas_sound (adrian)
 * nie dzia³a wyszkukiwanie niewidocznych - kod w search.cpp zakomentowany (chilek)
 * gdy mamy siebie na li¶cie kontaktów kadu wy¶wietla nasz status i opis (chilek)
+* wydzielenie szyfrowania przez ssl do modulu "encryption" oraz zwiazane
+  z tym nowe mechanizmy dla modulow (adrian)
+* nalozona latka sajmona dodajaca kilka mozliwych sciezek do plikow Arts-a (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
