patch michala - opisy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1800 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -73,6 +73,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wydzielenie szyfrowania przez ssl do modulu "encryption" oraz zwiazane
   z tym nowe mechanizmy dla modulow (adrian)
 * nalozona latka sajmona dodajaca kilka mozliwych sciezek do plikow Arts-a (adrian)
+* zaaplikowany patch michala umozliwiajacy ogladanie
+  wielolinijkowych opisow (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
