patch uto - wielolinijkowe opisy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1804 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -75,6 +75,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nalozona latka sajmona dodajaca kilka mozliwych sciezek do plikow Arts-a (adrian)
 * zaaplikowany patch michala umozliwiajacy ogladanie
   wielolinijkowych opisow (adrian)
+* zaaplikowany patch uto poprawiajacy wylaczanie wielolinijkowych opisow (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
