patch joi'a - odstepy miedzy dzwiekami
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1808 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -76,6 +76,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zaaplikowany patch michala umozliwiajacy ogladanie
   wielolinijkowych opisow (adrian)
 * zaaplikowany patch uto poprawiajacy wylaczanie wielolinijkowych opisow (adrian)
+* zaaplikowany patch joi'a na modul sound poprawiajacy zachowywanie
+  minimalnych odstepow miedzy dzwiekami powiadamiajacymi (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
