patch michala - statusbar
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1809 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -78,6 +78,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zaaplikowany patch uto poprawiajacy wylaczanie wielolinijkowych opisow (adrian)
 * zaaplikowany patch joi'a na modul sound poprawiajacy zachowywanie
   minimalnych odstepow miedzy dzwiekami powiadamiajacymi (adrian)
+* zaaplikowany patch michala usuwajacy splitter przy guziku ze statusem
+  w oknie kadu i poprawiajacy tym samym jego wyglad (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
