nie można rozpoczynać rozmów jeśli w skład grupy rozmówców wchodzi nasz uin
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1810 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -80,6 +80,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   minimalnych odstepow miedzy dzwiekami powiadamiajacymi (adrian)
 * zaaplikowany patch michala usuwajacy splitter przy guziku ze statusem
   w oknie kadu i poprawiajacy tym samym jego wyglad (adrian)
+* nie mo¿na rozpoczynaæ rozmów je¶li w sk³ad grupy rozmówców wchodzi nasz uin (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
