--- a/ChangeLog
+++ b/ChangeLog
@@ -83,7 +83,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nie mo¿na rozpoczynaæ rozmów je¶li w sk³ad grupy rozmówców wchodzi nasz uin (chilek)
 * kadu ³±czy siê z predefiniowan± list± serwerów GG je¶li nie mo¿e po³±czyæ siê z
   hubem GG (chilek)
-* dodany modu³ speech joi-a (chilek)
+* dodany modu³ speech joi-a wraz z moimi poprawkami (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
