poprawki dla macosx
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1821 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -85,6 +85,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   hubem GG (chilek)
 * dodany modu³ speech joi-a wraz z moimi poprawkami (chilek)
 * kompilacja modulow autoresponder, echo i speech domyslnie wylaczona (adrian)
+* poprawki kiemlo dla MacOS X (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
