patch joi'a - popup menu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1825 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -86,6 +86,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany modu³ speech joi-a wraz z moimi poprawkami (chilek)
 * kompilacja modulow autoresponder, echo i speech domyslnie wylaczona (adrian)
 * poprawki kiemlo dla MacOS X (adrian)
+* zaaplikowany patch joi'a likwidujacy blad z obsluga popup menu
+  listy kontaktow (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
