--- a/ChangeLog
+++ b/ChangeLog
@@ -88,6 +88,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki kiemlo dla MacOS X (adrian)
 * zaaplikowany patch joi'a likwidujacy blad z obsluga popup menu
   listy kontaktow (adrian)
+* poprawki w module encryption: zmiana umiejscowienia opcji "wyslij moj klucz"
+  oraz wyszarzanie, gdy nie mozna wyslac klucza (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
