dodana mozliwosc kopiowania hyperlinka w oknie rozmowy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1827 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -90,6 +90,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   listy kontaktow (adrian)
 * poprawki w module encryption: zmiana umiejscowienia opcji "wyslij moj klucz"
   oraz wyszarzanie, gdy nie mozna wyslac klucza (adrian)
+* dodana mo¿liwo¶æ kopiowania hyperlinka w oknie rozmowy (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
