--- a/THANKS
+++ b/THANKS
@@ -1,7 +1,8 @@
 Ludzie poni¿ej mieli wiêkszy lub
 mniejszy wp³yw na rozwój programu:
 
-Arek Mi¶kiewicz
+Wojciech Kaniewski
+Arkadiusz Mi¶kiewicz
 Krzysztof Godlewski
 Mariusz Witkowski
 Mateusz Papiernik
