--- a/ChangeLog
+++ b/ChangeLog
@@ -96,6 +96,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   i myszki PS/2 pod linuxem 2.6.x (adrian)
 * na³o¿ona ³ata joi-a przyspieszaj±ca parsera i dodaj±ca w nim mo¿liwo¶æ wstawiania
   wyj¶cia zewnêtrznych poleceñ pow³oki (chilek)
+* w oknie historii pokazywane s± daty rozmów (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
