--- a/ChangeLog
+++ b/ChangeLog
@@ -99,6 +99,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * w oknie historii pokazywane s± daty rozmów (chilek)
 * w oknie historii pokazywani s± rozmówcy (przegl±danie wys³anych SMSów na razie
   nie dzia³a) (chilek)
+* dodana mo¿liwo¶æ przegl±dania historii wys³anych smsów (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
