historia rozmowy: hop na drzewko ;)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1841 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -101,6 +101,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodana mo¿liwo¶æ przegl±dania historii wys³anych smsów (chilek)
 * nie znika nam opis przy problemach z po³±czeniem? (chilek)
 * mo¿liwo¶æ regulacji szeroko¶ci listy rozmówców w oknie historii (chilek)
+* historia rozmowy: hop na drzewko ;) (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
